[package]
name = "trapperu_real"
version = "0.1.0"
authors = ["DankusMemusXXX <14098249+tincaMatei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.3"
teloxide-macros = "0.3"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.11", features = [ "rt-threaded", "macros" ] }
lazy_static = "1.4.0"


