[package]
name = "trapperu_real"
version = "0.1.0"
authors = ["DankusMemusXXX <14098249+tincaMatei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["macros", "auto-send"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"

futures = "0.3.5"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.3"
lazy_static = "1.4.0"

rand = "0.8.3"
ctrlc = { version = "3.0", features = ["termination"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bimap = "0.6.1"
